# trends.earth-api-ui

./: .gitignore  CI_CD_SETUP.md  Dockerfile  MODULAR_STRUCTURE.md  PROJECT_SETUP_COMPLETE.md  README.md  STATS_ENHANCEMENT_SUMMARY.md  TEST_SUITE_SUMMARY.md  appspec.yml  babel.cfg  copilot-setup-steps.yml  demo_optimizations.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  gunicorn.conf.py  playwright.config.js  pyproject.toml  pytest.ini  requirements.txt  run_app.bat  run_app.ps1  run_tests.py  setup.py  tasks.py
.aws/: task-definition.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: copilot-setup-steps.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  machine_translation.yml  quality.yml  quality_new.yml  rollback-production.yml  rollback.yml  tests.yml  tests_new.yml  translation_update.yml
.tx/: config
docs/: PLAYWRIGHT_MOCK_DATA.md  STATUS_PAGE_OPTIMIZATIONS.md  TRANSLATIONS.md
docs/deployment/: README.md  aws-infrastructure-setup.md
scripts/: extract_old_translations.py  import_translations.py  machine_translate.py  merge_translations.py  setup-aws-infrastructure.sh  setup-github-secrets.sh  trendsearth-codedeploy-bootstrap.sh
scripts/aws-setup/: common.sh  setup-codedeploy.sh  setup-ec2.sh  setup-ecr.sh  setup-iam.sh  setup-s3.sh
scripts/deployment/: application_start.sh  application_stop.sh  before_install.sh  validate_service.sh
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/functional/: test_edit_fix_new.py  test_fix.py  test_geojson_fix.py  test_map_functionality.py  test_map_functionality_new.py  test_map_inset_and_main.py  test_modal_buttons.py  test_modal_callback_logic.py  test_offline_app.py  test_simple_app.py  test_startup.py  test_stats_error_handling.py  test_status_actions_combination.py  test_status_fix.py  test_status_fix_simple.py  test_status_tab.py  test_status_tabs_functionality.py  test_tab_issue.py  test_table_state_persistence.py
tests/integration/: test_api_structure.py  test_app_integration.py  test_cookie_auth.py  test_cookie_functionality.py  test_endpoints.py  test_endpoints2.py  test_forgot_password_integration.py  test_forgot_password_simple.py  test_imports.py  test_login.py  test_login_flow.py  test_login_tab_fix.py  test_refresh_token_auth.py  test_runner.py  test_table_filter_integration.py
tests/playwright/: __init__.py  api_mock.py  conftest.py  test_api_mocking.py  test_app_core.py  test_authentication.py  test_dashboard.py  test_mock_data_usage_example.py  test_simple_api_mocking.py  test_status_optimizations.py  test_table_filters.py  test_table_filters.py.backup
tests/unit/: test_aggrid_filters.py  test_app_javascript_fix.py  test_components_layout.py  test_components_tabs.py  test_config.py  test_css_property_formatting.py  test_deployment_info.py  test_duration_formatting.py  test_enhanced_stats_integration.py  test_error_handlers.py  test_execution_statistics_charts.py  test_executions_duration_fix.py  test_executions_status_filter_fix.py  test_filtering_improvements.py  test_forgot_password.py  test_http_client.py  test_issue_77_fixes.py  test_issue_79_integration.py  (+24 more)
trendsearth_ui/: app.py  config.py  email_templates.py
(+73 files in other folders)
